--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Math Game</title>
     <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' />
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css?v=1234">
+    <link href="//fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet" />
+    <link href='static/icomoon/style.css' rel="stylesheet"  />
 </head>
 <body>
 <div id="root"></div>
